Added problem description to top of file

--- a/project/notebooks/02_model_training.ipynb
+++ b/project/notebooks/02_model_training.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2a49eb0c",
+   "metadata": {},
+   "source": [
+    "# Problem Description\n",
+    "\n",
+    "The goal of this project is to develop a machine learning model capable of predicting an individual's **Quality of Life (QoL)** using behavioral, mental health, and digital usage data. Modern lifestyles are increasingly influenced by technology—daily screen time, notifications, sleep habits, study/work patterns, and social media activity are all intertwined with wellbeing. Because these factors interact in complex and nonlinear ways, traditional analytical methods struggle to capture the relationships effectively.\n",
+    "\n",
+    "In this notebook, we build a predictive model that learns how various lifestyle and psychological features (such as anxiety, depression, stress, sleep quality, productivity, and digital dependence) contribute to an individual's self-reported QoL or happiness score. The data used in this project is a synthetic dataset of 3,500 participants that simulates real-world behavioral and mental health patterns.\n",
+    "\n",
+    "The resulting model will later be deployed in an interactive Streamlit web application, allowing users to input their own behavioral data and receive an estimated QoL score. This demonstrates how machine learning can be applied to wellness assessment, digital behavior analytics, and personalized feedback systems.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "02effe8d",
