--- a/project/notebooks/02_model_training.ipynb
+++ b/project/notebooks/02_model_training.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ff413483",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
     "# Choose target\n",
     "target = \"happiness_score\"\n",
     "\n",
-    "# Numeric features we’ll use\n",
+    "# Numeric features\n",
     "feature_cols = [\n",
     "    \"age\",\n",
     "    \"device_hours_per_day\",\n",
@@ -303,7 +303,6 @@
     "    \"digital_dependence_score\",\n",
     "]\n",
     "\n",
-    "# (Optional) you can later add one-hot-encoded categorical features if you want\n",
     "\n",
     "X = df[feature_cols].values.astype(np.float32)\n",
     "y = df[target].values.astype(np.float32)\n",
@@ -399,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "e727bbcf",
    "metadata": {},
    "outputs": [
@@ -440,8 +439,7 @@
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
-    "        return self.net(x).squeeze(-1)  # (batch,) instead of (batch,1)\n",
-    "\n",
+    "        return self.net(x).squeeze(-1)\n",
     "model = QoLRegressor(input_dim)\n",
     "model\n"
    ]
@@ -472,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "dc4f2bdf",
    "metadata": {},
    "outputs": [
@@ -536,7 +534,7 @@
    "source": [
     "# Training loop\n",
     "for epoch in range(num_epochs):\n",
-    "    # ----- Training -----\n",
+    "    # Training\n",
     "    model.train()\n",
     "    running_train_loss = 0.0\n",
     "    for X_batch, y_batch in train_loader:\n",
@@ -554,7 +552,7 @@
     "    avg_train_loss = running_train_loss / len(train_loader.dataset)\n",
     "    train_losses.append(avg_train_loss)\n",
     "\n",
-    "    # ----- Validation -----\n",
+    "    # Validation\n",
     "    model.eval()\n",
     "    running_val_loss = 0.0\n",
     "    with torch.no_grad():\n",
@@ -677,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "2f51c74d",
    "metadata": {},
    "outputs": [
@@ -691,21 +689,12 @@
    ],
    "source": [
     "# Save trained model for deployment\n",
-    "# Make sure the deployment/model folder exists\n",
     "import os\n",
     "os.makedirs(\"../deployment/model\", exist_ok=True)\n",
     "\n",
     "torch.save(model.state_dict(), \"../deployment/model/best_model.pt\")\n",
     "print(\"Model saved!\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db0c5659",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
